# galgalim

./: .editorconfig  .gitignore  .prettierignore  README.md  package-lock.json  uriel.dockerfile
app/: Dockerfile  Makefile  build.sh  run.sh
app/src/: CMakeLists.txt  array.c  array.h  data_manager.c  data_manager.h  database.c  database.h  file.c  file.h  http.c  http.h  httpd.c  httpd.h  main.c  model.c  random.c  random.h  router.c  router.h  server.c  server.h  string.c  string.h
app/static/: draco_gltf.js  duck.gltf  fox.gltf  fragment.glsl  frontend.js  game.html  homepage.html  vertex.glsl
common/src/: array.c  array.h  cassandra_db.c  model.h  router.c  server.c  server.h  string.c  string.h
docs/: api_docs.md
frontend/: Dockerfile  app.py  requirements.txt  start.sh  wsgi.py
uriel/: build.sh  run.sh
uriel/src/: CMakeLists.txt  main.c  router.c  router.h
